--- a/package.json
+++ b/package.json
@@ -8,16 +8,29 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "bloodhound-js": "^1.2.3",
+    "bulma": "^0.7.5",
+    "bulma-slider": "^2.0.0",
+    "clipboard": "^2.0.4",
+    "core-js": "^2.6.10",
+    "howler": "^2.1.2",
+    "lodash": "^4.17.15",
+    "mobile-device-detect": "^0.2.3",
+    "vue": "^2.6.10",
+    "vue-js-modal": "^1.3.31",
+    "vue-router": "^3.1.3",
+    "vue-shortkey": "^3.1.7",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-service": "^3.8.0",
-    "babel-eslint": "^10.0.1",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
+    "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "^5.2.3",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^7.3.1",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
