--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "howler": "^2.1.3",
     "lodash": "^4.17.15",
     "mobile-device-detect": "^0.2.3",
+    "serialize-javascript": "^2.1.2",
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.1.3",
@@ -25,7 +26,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
     "@vue/cli-plugin-eslint": "^3.12.1",
-    "@vue/cli-service": "^3.12.1",
+    "@vue/cli-service": "^4.1.2",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
